# lcrag_studentqa

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: ingest.py
src/studentqa/: __init__.py  agent.py  api.py  config.py  loader.py  retrieval.py
