[project]
name = "studentqa"
version = "0.1.0"
description = "成都信息工程大学学生手册问答系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "langsmith>=0.3.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=6.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
studentqa = { workspace = true }
